tests/unit/compile/cases/syntax-errors/13.html-attribute-duplicate.t
Lorem <img src="" Src="" /> ipsum
<img src="" alt="" src=""/> dolor
---- THROW% ----
HTML attribute `src` is duplicated near `src=""/> dolor`
